saved site with dark mode implemented as default

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,15 +3,7 @@
   <div class="container-fluid flex-wrapper-main">
     <div class="row header-row">
       <div class="col-12 col-lg-6  header-logo-container">
-        <div class="row">
-          <div class="col-12">
-            <h1>Welcome to <br>DeGen University</h1>
-          </div>
-          <div class="col-12 slogan-container">
-            <p>Embrace the autism</p>
-            <p>Become a DeGen</p>
-          </div>
-        </div>
+        <img src="./images/colleges-are-zeros.png" alt="colleges-are-zeros-img">
       </div>
 
       <div class="col-12 col-lg-6 carousel-container">
