--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -11,7 +11,7 @@
       <% } %>
     </select>
   </div>
-  <table class="table table-dark table-hover classes-table">
+  <table class="table table-hover classes-table">
     <% for(let i=0; i < 3; i++) { %>
     <tr>
       <td>
