--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
   <div class="container-fluid flex-wrapper-main">
     <div class="row header-row">
       <div class="col-12 col-lg-6  header-logo-container">
-        <img src="./images/colleges-are-zeros.png" alt="colleges-are-zeros-img">
       </div>
 
       <div class="col-12 col-lg-6 carousel-container">
@@ -11,7 +10,7 @@
           <div class="carousel-inner ">
             <div class="carousel-item active">
               <div class="card col-12">
-                <img src="./images/Banks-are-Zeros.jpeg" class="card-img-top" alt="...">
+                <img src="./images/BowTiedOx.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Lorem ipsum 1</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -21,7 +20,7 @@
             </div>
             <div class="carousel-item">
               <div class="card">
-                <img src="./images/banksAreZeros.jpg" class="card-img-top" alt="...">
+                <img src="./images/angryBird.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Lorem ipsum 2</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -30,7 +29,7 @@
             </div>
             <div class="carousel-item">
               <div class="card">
-                <img src="./images/Banks-are-Zeros.jpeg" class="card-img-top" alt="...">
+                <img src="./images/reptile.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Lorem ipsum 3</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
