--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,17 @@
 </main>
 </div>
-<footer class="">
-  <p class="text-white">DeGen University © <%= new Date().getFullYear() %></p>
+<footer>
+  <p>DeGen University © <%= new Date().getFullYear() %></p>
+  <div class="bg-circle-bottom-container">
+    <div>
+      <div class="bg-circle bg-circle-bottom bg-light"></div>
+    </div>
+  </div>
 </footer>
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="./index.js" charset="utf-8"></script>
 </body>
 
