--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,7 +13,7 @@
       <label for="floatingTextarea2">Comments</label>
     </div>
     <div class="d-grid gap-2">
-      <button type="submit" class="btn btn-light btn-lg">Submit</button>
+      <button type="submit" class="btn btn-light btn-lg border-dark">Submit</button>
     </div>
   </form>
 
