--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,8 @@
 
   <link rel="icon" href="./favicon/favicon.ico">
 
+<!-- AOS -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,13 +26,16 @@
 </head>
 
 <body>
-  <div class="flex-wrapper bg-dark">
+  <div class="bg-circle-wrapper">
+    <div class="bg-circle bg-circle-top bg-light"></div>
+  </div>
+  <div class="flex-wrapper">
     <div>
       <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="/">
-              <div class="brand-logo text-white">
+              <div class="brand-logo">
                 <span>DeGen University</span>
               </div>
             </a>
