--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 
   <!-- Favicon -->
 
-  <!-- <link rel="icon" href="./favicon/favicon.ico"> -->
+  <link rel="icon" href="./favicon/favicon.ico">
 
 <!-- AOS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
