--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
 <div class="container-fluid flex-wrapper-main">
   <form class="" action="/contact" method="post">
     <h1>Contact us</h1>
-    <p class="text-white">Have something on your mind? We're looking forward to be greater...</p>
+    <p>Have something on your mind? We're looking forward to be greater...</p>
     <div class="form-floating mb-3">
       <input type="text" class="form-control" id="floatingInput" placeholder="You username">
       <label for="floatingInput">Username</label>
@@ -13,7 +13,7 @@
       <label for="floatingTextarea2">Comments</label>
     </div>
     <div class="d-grid gap-2">
-      <button type="submit" class="btn btn-light btn-lg border-dark">Submit</button>
+      <button type="submit" class="btn btn-light btn-lg border-dark"></button>
     </div>
   </form>
 
