--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,15 @@
 /* GENERAL STYLES */
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .container-fluid {
   padding: 3% 12%;
 }
@@ -15,7 +25,6 @@
 .flex-wrapper-main {
   height: 70vh;
   display: flex;
-  justify-content: center;
   align-items: stretch;
   flex-direction: column;
 }
@@ -58,6 +67,20 @@ div.bg-circle-bottom {
   animation: fade-in-bottom-circle 1.5s;
 }
 
+button.btn {
+  background-image: url("../images/submit.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 48px;
+  width: 25%;
+  transition: 1s;
+}
+
+button.btn:hover {
+animation: button-hover 1s infinite;
+}
+
 /* HEADER */
 nav .brand-logo span {
   font-size: 1.75rem;
@@ -74,7 +97,6 @@ nav .brand-logo span {
     background-repeat: no-repeat;
     background-position: center;
     min-height: 20vh;
-    max-width: 80vw;
   }
 
 h1 {
@@ -167,8 +189,13 @@ a.table-row-link:link, a.table-row-link:visited {
 }
 
 /* ABOUT US PAGE */
-.about-section p {
-  /* color: white; */
+
+
+.about-section h1 {
+    margin-bottom: 4rem;
+}
+
+.about-section p{
   font-size: 18px;
 }
 
@@ -220,7 +247,9 @@ footer p {
   left: 0 !important;
 }
 
-
+.bg-circle-bottom-container div {
+  width: 99vw;
+}
 
   nav .brand-logo span {
     font-size: 1.25rem;
@@ -311,5 +340,18 @@ footer p {
   100% {
     opacity: 1;
     transform: scale(1) translateY(50%);
+  }
+}
+
+
+@keyframes button-hover {
+  0% {
+    background-color: #1787AC;
+      background-image: url("../images/submit-neg.png");
+  }
+
+  100% {
+    background-color: #1787AC;
+      background-image: url("../images/submit-neg.png");
   }
 }
