--- a/views/class.ejs
+++ b/views/class.ejs
@@ -42,7 +42,7 @@
         <label for="floatingTextarea2">Leave a comment</label>
       </div>
       <div class="d-grid gap-2">
-        <button type="submit" class="btn btn-light btn-lg  border-dark">Publish</button>
+        <button type="submit" class="btn btn-light btn-lg  border-dark"></button>
       </div>
     </form>
   </div>
