--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -16,7 +16,7 @@
 
     <% for(let i=0; i < 10 ; i++) { %>
     <div class="col">
-      <div class="card h-100 my-3 mx-auto">
+        <div class="card h-100 my-3 mx-auto" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="<%= (50*(i+1)) %>" data-aos-offset="0">
         <img src="./images/reptile.jpg" class="card-img-top" alt="...">
         <div class="card-body pb-0">
           <h5 class="card-title">OX's Fat Loss Program</h5>
