--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,54 +1,52 @@
 <%- include('partials/header') %>
 
-  <div class="container-fluid flex-wrapper-main">
-    <div class="row header-row">
-      <div class="col-12 col-lg-6  header-logo-container">
-      </div>
-
-      <div class="col-12 col-lg-6 carousel-container">
-        <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner ">
-            <div class="carousel-item active">
-              <div class="card col-12">
-                <img src="./images/BowTiedOx.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Lorem ipsum 1</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea commodo consequat.</p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="card">
-                <img src="./images/angryBird.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Lorem ipsum 2</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="card">
-                <img src="./images/reptile.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Lorem ipsum 3</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
+<div class="container-fluid flex-wrapper-main">
+  <div class="row header-row">
+    <div class="col-12 col-lg-6  header-logo-container"></div>
+    <div class="col-12 col-lg-6 carousel-container index-section">
+      <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner ">
+          <div class="carousel-item active">
+            <div class="card">
+              <img src="./images/BowTiedOx.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Lorem ipsum 1</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                  ea commodo consequat.</p>
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <div class="carousel-item">
+            <div class="card">
+              <img src="./images/angryBird.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Lorem ipsum 2</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card">
+              <img src="./images/reptile.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Lorem ipsum 3</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+          </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
-
   </div>
+
+</div>
 
 <%- include('partials/footer') %>
