--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,7 @@
               <img src="./images/BowTiedOx.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Lorem ipsum 1</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                  ea commodo consequat.</p>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
           </div>
