--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-<div class="container-fluid flex-wrapper-main">
+<div class="container-fluid flex-wrapper-main index-container">
   <div class="row header-row">
     <div class="col-12 col-lg-6  header-logo-container"></div>
     <div class="col-12 col-lg-6 carousel-container index-section">
