--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,9 @@
 <!-- AOS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+<!-- Iconify -->
+<script src="https://code.iconify.design/2/2.0.4/iconify.min.js"></script>
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
